SET(CNAME "ssa-utils")
SET(VERSION 0.03)

PROJECT(${CNAME} C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# cmake modules
INCLUDE(CheckIncludeFile)
INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)
INCLUDE(CTest)

# user options
OPTION(WITHOUT_GETTEXT "Build without localization support" "OFF")
# also, this variables may be usefull:
# CMAKE_BUILD_TYPE        : Debug | Release
# CMAKE_INSTALL_PREFIX    : /usr | /usr/local | ...

IF    (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET (CMAKE_BUILD_TYPE "Debug")
  SET (CMAKE_C_FLAGS "-ggdb -Wall -pedantic -DDEBUG")
ELSE  (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET (CMAKE_BUILD_TYPE "Release")
  IF    (NOT CMAKE_C_FLAGS)
    SET (CMAKE_C_FLAGS "-O2 -Wall -pedantic -DNDEBUG")
  ENDIF (NOT CMAKE_C_FLAGS)
ENDIF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")

# set paths
IF    (NOT CMAKE_INSTALL_PREFIX)
  SET(CMAKE_INSTALL_PREFIX "/usr/local")
ENDIF (NOT CMAKE_INSTALL_PREFIX)

SET (INSTALL_BIN "${CMAKE_INSTALL_PREFIX}/bin")
SET (INSTALL_LIB "${CMAKE_INSTALL_PREFIX}/lib")

SET (BUILD_LIBS "")

IF (NOT LIBDIR)
  SET (LIBDIR "lib")
ENDIF (NOT LIBDIR)

SET(REQUIRED_HEADERS
    "ctype.h" "fenv.h" "stdarg.h" "stdbool.h" "stddef.h"
    "stdint.h" "stdio.h" "stdlib.h" "string.h" "unistd.h")

FOREACH   (HDR ${REQUIRED_HEADERS})
  CHECK_INCLUDE_FILE (${HDR}  TEST_H)
  IF    (NOT TEST_H)
    MESSAGE(FATAL_ERROR "Build aborted.")
  ENDIF (NOT TEST_H)
  UNSET(TEST_H CACHE)
ENDFOREACH()

## checks
# libm[ath]
FIND_LIBRARY(LIB_MATH m)

IF    (LIB_MATH)
  SET (BUILD_LIBS ${BUILD_LIBS} ${LIB_MATH})
  SET (LIBMATH_STATUS "FOUND")
ELSE  (LIB_MATH)
  MESSAGE (FATAL_ERROR "libm not found")
ENDIF (LIB_MATH)

# gettext

IF    (WITHOUT_GETTEXT STREQUAL "ON")
  SET (GETTEXT_STATUS "DISABLED")
ELSE  (WITHOUT_GETTEXT STREQUAL "ON")
  FIND_PACKAGE(Gettext)

  IF    (NOT GETTEXT_FOUND)
    SET (GETTEXT_STATUS "NOT FOUND")
  ELSE  (NOT GETTEXT_FOUND)
    SET (GETTEXT_STATUS "FOUND")
  ENDIF (NOT GETTEXT_FOUND)
ENDIF (WITHOUT_GETTEXT STREQUAL "ON")

MESSAGE (STATUS "------------------------------------------")
MESSAGE (STATUS "Build type is:        ${CMAKE_BUILD_TYPE}")
MESSAGE (STATUS "CFLAGS is:            ${CMAKE_C_FLAGS}")
MESSAGE (STATUS "")
MESSAGE (STATUS "Install prefix:       ${CMAKE_INSTALL_PREFIX}")
MESSAGE (STATUS "Binaries directory:   ${INSTALL_BIN}")
MESSAGE (STATUS "")
MESSAGE (STATUS "Required libraries:")
MESSAGE (STATUS "  libmath: ${LIBMATH_STATUS}")
MESSAGE (STATUS "")
MESSAGE (STATUS "Aux dependencies:")
MESSAGE (STATUS "  gettext: ${GETTEXT_STATUS}")
MESSAGE (STATUS "------------------------------------------")

ADD_SUBDIRECTORY (src)

IF    (GETTEXT_STATUS STREQUAL "FOUND")
  ADD_SUBDIRECTORY (po)
ENDIF (GETTEXT_STATUS STREQUAL "FOUND")

IF    (CMAKE_BUILD_TYPE STREQUAL "Debug")
  ADD_SUBDIRECTORY (tests)
ENDIF (CMAKE_BUILD_TYPE STREQUAL "Debug")
